--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                                     <td>270€</td>
                                 </tr>
                             </table>
-                            <a href="#" class="btn btn-lg btn-primary text-white" data-toggle="tooltip"
-                                data-placement="bottom" title="Don't hesitate">BOOK</a>
+                            <a href="#" class="btn btn-lg btn-primary text-white" data-bs-toggle="tooltip"
+                                data-bs-placement="bottom" data-bs-title="Do not hesitate, just book me...">BOOK</a>
                         </div>
                     </div>
                 </div>
@@ -190,8 +190,8 @@
                                     <td>360€</td>
                                 </tr>
                             </table>
-                            <a href="#" class="btn btn-lg btn-primary text-white" data-toggle="tooltip"
-                                data-placement="bottom" title="Don't hesitate">BOOK</a>
+                            <a href="#" class="btn btn-lg btn-primary text-white" data-bs-toggle="tooltip"
+                                data-bs-placement="bottom" data-bs-title="Do not hesitate, just book me...">BOOK</a>
                         </div>
                     </div>
                 </div>
@@ -222,8 +222,9 @@
                                     <td>480€</td>
                                 </tr>
                             </table>
-                            <a href="#" class="btn btn-lg btn-primary text-white" data-toggle="tooltip"
-                                data-placement="bottom" title="Don't hesitate">BOOK</a>
+                            <a href="#pricing" class="btn btn-lg btn-primary text-white" data-bs-container="body"
+                                data-bs-toggle="popover" data-bs-placement="bottom"
+                                data-bs-content="Book me, see the magic...">BOOK</a>
                         </div>
                     </div>
                 </div>
@@ -254,8 +255,9 @@
                                     <td>600€</td>
                                 </tr>
                             </table>
-                            <a href="#" class="btn btn-lg btn-primary text-white" data-toggle="tooltip"
-                                data-placement="bottom" title="Don't hesitate">BOOK</a>
+                            <a href="#pricing" class="btn btn-lg btn-primary text-white" data-bs-container="body"
+                                data-bs-toggle="popover" data-bs-placement="bottom"
+                                data-bs-content="Book me, see the magic...">BOOK</a>
                         </div>
                     </div>
                 </div>
@@ -279,15 +281,27 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="./img/1.png" class="d-block w-100" alt="economy">
+                        <div class="carousel-caption d-none d-md-block caption-bg">
+                            <h5>Economy</h5>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./img/2.png" class="d-block w-100" alt="standard">
+                        <div class="carousel-caption d-none d-md-block caption-bg">
+                            <h5>Standard</h5>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./img/3.png" class="d-block w-100" alt="deluxe">
+                        <div class="carousel-caption d-none d-md-block caption-bg">
+                            <h5>Deluxe</h5>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./img/4.png" class="d-block w-100" alt="superior">
+                        <div class="carousel-caption d-none d-md-block caption-bg">
+                            <h5>Superior</h5>
+                        </div>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -374,27 +388,37 @@
             // který je hned za navbarToggler v HTML struktuře. V kontextu Bootstrap navigace, tento element 
             // obvykle reprezentuje rozbalovací část navigační lišty. Pak vytváříte instanci 
             // Bootstrap Collapse komponenty pro tento element, kterou pak můžete programově skrýt.
-            
+
             navLinks.forEach(function (link) {
                 link.addEventListener('click', collapseNavbar);
             });
+
+
             //modal
             document.querySelectorAll('.modal').forEach(function (modal) {
                 modal.addEventListener('hide.bs.modal', function () {
                     const memory = this.innerHTML;
                     this.innerHTML = memory;
                 });
+                //Vysvětlení:
+
+                // document.querySelectorAll('.modal').forEach(function(modal) {...}): 
+                // Vybere všechny elementy s třídou modal a pro každý z nich provede funkci uvedenou v těle forEach.
+
+                // modal.addEventListener('hide.bs.modal', function() {...}): Přidává posluchače událostí pro každé modální okno, 
+                // který reaguje na událost hide.bs.modal - událost specifickou pro Bootstrap, která nastane, když se modální okno začíná skrývat.
+
+                // var memory = this.innerHTML; this.innerHTML = memory;: Ukládá aktuální HTML obsah modálního okna do proměnné memory a 
+                // poté ho okamžitě nastavuje zpět. Toto zachovává aktuální stav modálního okna, i když je skryto.
             });
-            //Vysvětlení:
 
-            // document.querySelectorAll('.modal').forEach(function(modal) {...}): 
-            // Vybere všechny elementy s třídou modal a pro každý z nich provede funkci uvedenou v těle forEach.
 
-            // modal.addEventListener('hide.bs.modal', function() {...}): Přidává posluchače událostí pro každé modální okno, 
-            // který reaguje na událost hide.bs.modal - událost specifickou pro Bootstrap, která nastane, když se modální okno začíná skrývat.
-
-            // var memory = this.innerHTML; this.innerHTML = memory;: Ukládá aktuální HTML obsah modálního okna do proměnné memory a 
-            // poté ho okamžitě nastavuje zpět. Toto zachovává aktuální stav modálního okna, i když je skryto.
+            //tooltip
+            const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+            const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+            //popover
+            const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+            const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
         });
     </script>
 </body>
